create and index pages

--- a/OurNewProject/Views/Branches/TheBranch.cshtml
+++ b/OurNewProject/Views/Branches/TheBranch.cshtml
@@ -37,13 +37,13 @@
                     <li class="w3-padding-16"><b>  @item.Hours</b></li>
                     <li class="w3-padding-16"><b>@item.Address</b> </li>
 
-                    <li class="w3-padding-16">
+                   @* <li class="w3-padding-16">
                         <h2 class="w3-wide">$ 10</h2>
                         <span class="w3-opacity">per month</span>
-                    </li>
+                    </li>*@
                     <li class="w3-light-grey w3-padding-24">
                         @* <button class="w3-button w3-black w3-padding-large">Sign Up</button>*@
-                        <button onclick="document.getElementById('id01').style.display='block'" class="w3-button text-white" style="background-color: #090e46">Open Modal</button>
+                        <button onclick="document.getElementById('id01').style.display='block'" class="w3-button text-white" style="background-color: #090e46">אודות הסניף</button>
 
                     </li>
                 </ul>
@@ -62,14 +62,14 @@
                     <header class="w3-container" style="background-color: #c66b95">
                         <span onclick="document.getElementById('id01').style.display='none'"
                               class="w3-button w3-display-topright">&times;</span>
-                        <h2 class="text-center ">הכתובת שלנו </h2>
+                        <h2 class="text-center "> אודות הסניף</h2>
                     </header>
                     <div class="w3-container">
-                        <p>Some text..</p>
-                        <p>Some text..</p>
+                        <p class="text-center"> ישיבה בחוץ - קיימת</p>
+                        <p class="text-center">כשרות - כשר למהדרין </p>
+                        <p class="text-center"> הגשה לשולחן - קיימת </p>
                     </div>
-                    <footer class="w3-container" style="background-color: #c66b95
-">
+                    <footer class="w3-container" style="background-color: #c66b95">
                         <p class="text-center">נשמח לראותכם</p>
                     </footer>
                 </div>
