--- a/OurNewProject/Views/Home/Team.cshtml
+++ b/OurNewProject/Views/Home/Team.cshtml
@@ -25,8 +25,8 @@
                 <p class="title">Web Developer</p>
                 <p>The College of Management Academic Studies</p>
                 <div style="margin: 24px 0;">
-                    <a href="https://www.linkedin.com/in/zehava-liviyev-23006a202/"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://www.facebook.com/profile.php?id=100003258770015"><i class="fa fa-facebook"></i></a>
+                    <a  target="_blank" href="https://www.linkedin.com/in/zehava-liviyev-23006a202/"><i class="fa fa-linkedin"></i></a>
+                    <a  target="_blank" href="https://www.facebook.com/profile.php?id=100003258770015"><i class="fa fa-facebook"></i></a>
                 </div>
                 <p><button>Contact</button></p>
             </div>
@@ -37,8 +37,8 @@
                 <p class="title">Web Developer</p>
                 <p>The College of Management Academic Studies</p>
                 <div style="margin: 24px 0;">
-                    <a href="https://www.linkedin.com/in/itay-bayazi-19961000/"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://www.facebook.com/bayazi"><i class="fa fa-facebook"></i></a>
+                    <a  target="_blank" href="https://www.linkedin.com/in/itay-bayazi-19961000/"><i class="fa fa-linkedin"></i></a>
+                    <a  target="_blank" href="https://www.facebook.com/bayazi"><i class="fa fa-facebook"></i></a>
                 </div>
                 <p><button>Contact</button></p>
             </div>
