--- a/OurNewProject/wwwroot/css/log-out.css
+++ b/OurNewProject/wwwroot/css/log-out.css
@@ -132,7 +132,7 @@ input[type=text] {
 }
 
     input[type=text]:focus {
-        background-color: #090e46;
+        background-color: #d6d6a2;
         border-bottom: 2px solid #5fbae9;
     }
 
