--- a/OurNewProject/Views/Categories/Index.cshtml
+++ b/OurNewProject/Views/Categories/Index.cshtml
@@ -4,32 +4,92 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
+<h1 style="color: #d6d6a2" class="text-center"> רשימת הקטגוריות </h1>
+
+<br />
+
+<form class="text-center" asp-action="Search">
+    <input style="background-color:#d6d6a2" name="query" id="query" placeholder="הכנס ערך" autocomplete="off" />
+    <input style="background-color:#d6d6a2" type="submit" value="חפש" />
+</form>
+
+
+<br />
+
+<div class="text-center">
+    <button style="background-color:#d6d6a2"> <a asp-area="" asp-action="Index"> אפס רשימה </a></button>
+</div>
+
+
+
+<br />
+<h3 style="color: #d6d6a2" class="text-center">
+    <a asp-action="Create"> הוסף קטגוריוה חדשה </a>
+</h3>
+
+
+<br />
+
+
+
+
 <table class="table">
     <thead>
-        <tr>
+        <tr style=" background-color: #090e46; color: #d6d6a2 ; ">
+
             <th>
                 @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th class="text-center">
+                אפשרויות
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td class="text-center">
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+
+
+@section Scripts{
+
+    <script src="~/js/Search.js"></script>
+
+    <script type="text/html" id="hidden-template">
+        <tr>
+            <td>
+
+                {name}
+
+            </td>
+            @*<td>
+
+                    {id}
+
+                </td>*@
+
+
+
+            <td>
+                <a href="/Categories/Edit/{id}">Edit</a> |
+                <a href="/Categories/Details/{id}">Details</a> |
+                <a href="/Categories/Delete/{id}">Delete</a>
+            </td>
+        </tr>
+    </script>
+}
