--- a/OurNewProject/Views/Home/Index.cshtml
+++ b/OurNewProject/Views/Home/Index.cshtml
@@ -2,36 +2,14 @@
     ViewData["Title"] = "Home Page";
 }
 
-<!--<div class="text-center">-->
 
 
 
-<div class="text-center">
+<body style="background-color: #d6d6a2">
 
 
-
-    <video width="320" height="240" controls>
-        <source src="~/Strawberry,Oreo Roll Icecream_Japan street food_Harajuku Japan.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
-    <!--Weather Widget-->
-    <a class="weatherwidget-io" href="https://forecast7.com/en/32d0934d78/tel-aviv-yafo/" data-label_1="TEL AVIV" data-label_2="WEATHER" data-theme="salmon">TEL AVIV WEATHER</a>
-    <script>
-        !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
-    </script>
-
-    <br />
-    <!--Google Maps-->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3384.6900954119606!2d34.77224248575843!3d31.969303132036828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502b3f69a0c1b27%3A0x9df60473d5201ec3!2z15DXnNeZINeV15nXltecIDEwLCDXqNeQ16nXldefINec16bXmdeV158!5e0!3m2!1siw!2sil!4v1627570605134!5m2!1siw!2sil" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <pre></pre>
+    <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre>
 
 
-</div>
-
-<p>
-
-    <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/225226420_814045109241394_6830632159353038223_n.png?_nc_cat=106&ccb=1-3&_nc_sid=730e14&_nc_ohc=XWmBLWh4lsAAX8e1aOb&_nc_ht=scontent.ftlv6-1.fna&oh=c2d37e5431a9b33a5457d8c0f6b0b05b&oe=61086152" width="1000" height="1000" class="img-fluid">
-
-</p>
-
-
+</body>
