--- a/OurNewProject/Views/Products/Index.cshtml
+++ b/OurNewProject/Views/Products/Index.cshtml
@@ -7,25 +7,37 @@
 <html class="text-center">
 
 
-<h1 class="text-center">Index</h1>
+<h1 style="color: #d6d6a2" class="text-center"> רשימת המוצרים </h1>
+<br />
+<h3 style="color: #d6d6a2" class="text-center">
+    <a asp-action="Create"> הוסף מוצר חדש </a>
+</h3>
+<br />
+<div style="color: #d6d6a2" class="text-center" >
+    <a asp-action="Create" asp-controller="ProductImages">  <b> כעת , לאחר שיצרת מוצר לחץ כאן כדי להוסיף לו תמונה </b></a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<br />
+
+
 <table class="table">
     <thead>
-        <tr>
-            <th>
+        <tr style=" background-color: #090e46; color: #d6d6a2 ; ">
+
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Price)
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Category)
+            </th>
+            <th class="text-center">
+                אפשרויות
             </th>
             <th></th>
         </tr>
@@ -34,19 +46,19 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Category.Id)
+                <td class="text-center">
+                    @Html.DisplayFor(modelItem => item.Category.Name)
                 </td>
-                <td>
+                <td class="text-center">
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
