--- a/OurNewProject/Views/Branches/TheBranch.cshtml
+++ b/OurNewProject/Views/Branches/TheBranch.cshtml
@@ -16,15 +16,20 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 
+
+
+
 <html>
 <body>
 
     <!-- Grid -->
+    <div class="text-center">
+    <img src ="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/227185688_754645218603223_4954627745840666676_n.png?_nc_cat=107&ccb=1-3&_nc_sid=730e14&_nc_ohc=BSzaJlF7c2kAX-3Oyjd&_nc_oc=AQmUTYYIRu1x02cF7tbkq9s53l0httkk3KZGI7aS4JiVNzXHlRPgZYUhhNnvtV5McvA&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=412ed13d2d7bf2f7c67e074b8fd0d0fd&oe=6108E88D" style="width:491px; height:500px">
     <div class="w3-row-padding" style="font-family: 'Bona Nova', serif;" id="plans">
         <div class="w3-center w3-padding-64">
-            <h3>Pricing Plans</h3>
-            <p>Choose a pricing plan that fits your needs.</p>
+            <h1 style="font-family: 'Bona Nova', serif;color: #090e46">הסניפים שלנו מחכים לכם !</h1>
         </div>
+    </div>
 
 
 
@@ -32,19 +37,14 @@
         {
             <div class="w3-third w3-margin-bottom">
                 <ul class="w3-ul w3-border w3-center w3-hover-shadow">
-                    <li class="w3-jumbo text-white w3-xlarge w3-padding-32" style="background-color: #d6d6a2">@Html.DisplayFor(modelItem => item.Name)</li>
+                    <li class="w3-jumbo text-white w3-xlarge w3-padding-32" style="background-color: #d6d6a2; padding: 0;">@Html.DisplayFor(modelItem => item.Name)</li>
                     <li class="w3-padding-16"><b> @item.Phone</b></li>
                     <li class="w3-padding-16"><b>  @item.Hours</b></li>
                     <li class="w3-padding-16"><b>@item.Address</b> </li>
 
-                   @* <li class="w3-padding-16">
-                        <h2 class="w3-wide">$ 10</h2>
-                        <span class="w3-opacity">per month</span>
-                    </li>*@
-                    <li class="w3-light-grey w3-padding-24">
-                        @* <button class="w3-button w3-black w3-padding-large">Sign Up</button>*@
-                        <button onclick="document.getElementById('id01').style.display='block'" class="w3-button text-white" style="background-color: #090e46">אודות הסניף</button>
 
+                    <li class="w3-light-grey w3-padding-24">
+                        <button onclick="document.getElementById('id01').style.display='block'" class="w3-button text-white" style="background-color: #090e46">אודות הסניף</button>
                     </li>
                 </ul>
             </div>
@@ -59,18 +59,18 @@
 
             <div id="id01" class="w3-modal">
                 <div class="w3-modal-content w3-card-4">
-                    <header class="w3-container" style="background-color: #c66b95">
+                    <header class="w3-container" style="background-color: #090e46">
                         <span onclick="document.getElementById('id01').style.display='none'"
                               class="w3-button w3-display-topright">&times;</span>
-                        <h2 class="text-center "> אודות הסניף</h2>
+                        <h2 class="text-center " style="color: #d6d6a2"> אודות הסניף</h2>
                     </header>
                     <div class="w3-container">
-                        <p class="text-center"> ישיבה בחוץ - קיימת</p>
-                        <p class="text-center">כשרות - כשר למהדרין </p>
-                        <p class="text-center"> הגשה לשולחן - קיימת </p>
+                        <p class="text-center" style="color: #090e46"> ישיבה בחוץ - קיימת</p>
+                        <p class="text-center" style="color: #090e46">כשרות - כשר למהדרין </p>
+                        <p class="text-center" style="color: #090e46"> הגשה לשולחן - קיימת </p>
                     </div>
-                    <footer class="w3-container" style="background-color: #c66b95">
-                        <p class="text-center">נשמח לראותכם</p>
+                    <footer class="w3-container" style=" background-color: #090e46">
+                        <p class="text-center" style="color: #d6d6a2">נשמח לראותכם</p>
                     </footer>
                 </div>
             </div>
