--- a/OurNewProject/Views/Home/Index.cshtml
+++ b/OurNewProject/Views/Home/Index.cshtml
@@ -8,8 +8,49 @@
 <body style="background-color: #d6d6a2">
 
 
-    <pre></pre>
-    <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre> <pre></pre>
+    <div class="cid" id="cid">
+
+        <section class="carousel-pad" >
+            <a href="\Home\Gallery">
+                <div   id="home" class="carousel slide main; text-center" style="height:800px data-ride="carousel">
+                    <div class="tag-gallery"><h5>Coming Soon !!!</h5></div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner" style="border-radius:25px;">
+                        <div class="carousel-item active">
+                            <img class="d-block"  src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/228829681_758397581561320_6825572462461335552_n.png?_nc_cat=105&ccb=1-3&_nc_sid=730e14&_nc_ohc=MGRCgLBuM3MAX94LCWR&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=f0d2c25552333f35f89266ba94bb682b&oe=610CA1BE"  alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block " src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226788526_754623908605354_2388674748591718896_n.png?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=VOJisUlMYaIAX_v0o_0&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=399476e2ccaf11d6a4cd8cd2bc63b5ff&oe=610C9FF1" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block " src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226864359_754623895272022_7310758689881530843_n.png?_nc_cat=104&ccb=1-3&_nc_sid=730e14&_nc_ohc=uyR_L7KRFIUAX8Q0pms&_nc_ht=scontent.ftlv6-1.fna&oh=9e7c61b147797fbae3c4d0984af65bda&oe=610CD59A" alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block " src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t39.30808-6/226836191_754623961938682_7373053499286711741_n.png?_nc_cat=105&ccb=1-3&_nc_sid=730e14&_nc_ohc=Ck5o38lLA28AX_hd6uj&_nc_ht=scontent.ftlv6-1.fna&oh=193c3a46b3e84ffbf6f486e3ee6983e7&oe=610CB08F" alt="four slide">
+                        </div>
+                    </div>
+                        <p class="carousel-control-prev" href="#home" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only" s>Previous</span>
+                        </p>
+                        <p class="carousel-control-next" href="#home" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </p>
+                </div>
+            </a>
+        </section>
+
+     </div>
+
+
+
+
 
 
 </body>
