--- a/OurNewProject/Views/Products/MenuSearch.cshtml
+++ b/OurNewProject/Views/Products/MenuSearch.cshtml
@@ -1,5 +1,5 @@
 ﻿@using  OurNewProject.Controllers@*
-@model IEnumerable<OurNewProject.Models.Category>*@
+    @model IEnumerable<OurNewProject.Models.Category>*@
 @model IEnumerable<ProductJoin>
 
 @{
@@ -23,28 +23,31 @@
     </div>
 </div>
 
-<aside class="asideStyle">
+
+<div class="text-center" >
     <form class="formStyle" asp-controller="Products" asp-action="Search">
-        <label class="text-light" for="game Name">Game name :</label><br />
+        <label class="text-dark text-center"> שם המוצר :</label><br />
         <input type="text" id="productName" name="productName" required min="1"><br />
-        <label class="text-light" for="price">Max Price :</label><br />
+        <label class="text-dark text-center" for="price">מחיר מקסימלי : </label><br />
         <select class="choiceStyle" name="price" id="price" required>
+            <option value="15">15</option>
             <option value="25">25</option>
-            <option value="13">13</option>
+            <option value="40">40</option>
+            <option value="50">50</option>
         </select>
         <br />
-        <label for="categorie" style="color:white;">Category :</label><br />
-    @*    <select class="choiceStyle" name="category" id="category" required>
-            @foreach (var item in Model as ICollection<ProductJoin>)
-            {
-                <option value="@item.p">@item.p.Category.Name</option>
+        @* <label for="categorie" style="color:white;">קטגוריה  :</label><br />
+            <select class="choiceStyle" name="category" id="category" required>
+                @foreach (var item in Model as ICollection<ProductJoin>)
+                {
+                    <option value="@item.p.Category.Name">@item.p.Category.Name</option>
 
-            }
-        </select>*@
+                }
+            </select>*@
         <br /><br />
         <button type="submit" value="Search" class="btn btn-dark">Search</button>
     </form>
-</aside>
+</div>
 
 
 
