--- a/OurNewProject/Views/Branches/Create.cshtml
+++ b/OurNewProject/Views/Branches/Create.cshtml
@@ -4,49 +4,71 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>Branch</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<head>
+
+    <link rel="stylesheet" href="~/css/Create.css" />
+
+</head>
+
+
+
+
+<body>
+
+    <div class="text-center" id="page-wrapper">
+        <h1 style="color: #090e46"> יצירת סניף </h1>
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Hours" class="control-label"></label>
-                <input asp-for="Hours" class="form-control" />
-                <span asp-validation-for="Hours" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+
+
+            <label asp-for="Name" class="control-label"></label>
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+
+
+            <br />
+            <label asp-for="Phone" class="control-label"></label>
+            <input asp-for="Phone" class="form-control" />
+            <span asp-validation-for="Phone" class="text-danger"></span>
+
+            <br />
+            <label asp-for="Address" class="control-label"></label>
+            <input asp-for="Address" class="form-control" />
+            <span asp-validation-for="Address" class="text-danger"></span>
+
+            <br />
+            <label asp-for="Hours" class="control-label"></label>
+            <input asp-for="Hours" class="form-control" />
+            <span asp-validation-for="Hours" class="text-danger"></span>
+
+            <br />
+
             <label asp-for="mySupplier" class="control-label"></label>
             <select multiple asp-for="mySupplier" class="form-control" asp-items="@ViewBag.Suppliers"></select>
             <span asp-validation-for="mySupplier" class="text-danger"></span>
-            </div>
-    <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
-    </div>
-    </form>
-</div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
+            <br />
+            <div class="form-group">
+                <input style="background-color:#d6d6a2" type="submit" value="Create" />
+            </div>
+
+        </form>
+
+
+        <div>
+            <a class="text-left" asp-action="Index"> חזור אחורה </a>
+        </div>
+
+    </div>
+
+</body>
+
+
+
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
