--- a/OurNewProject/Views/Categories/Index.cshtml
+++ b/OurNewProject/Views/Categories/Index.cshtml
@@ -39,7 +39,7 @@
     <thead>
         <tr style=" background-color: #090e46; color: #d6d6a2 ; ">
 
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th class="text-center">
