--- a/OurNewProject/Views/Suppliers/Create.cshtml
+++ b/OurNewProject/Views/Suppliers/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+@*<h1>Create</h1>
 
 <h4>Supplier</h4>
 <hr />
@@ -39,7 +39,60 @@
 
 <div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
+
+
+
+<head>
+
+    <link rel="stylesheet" href="~/css/Create.css" />
+
+</head>
+
+<body>
+
+    <div class="text-center" id="page-wrapper">
+        <h1 style="color: #090e46"> יצירת ספק </h1>
+        <form asp-action="Create">
+
+
+            <label asp-for="Name" class="control-label"></label>
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+
+
+            <br />
+            <label asp-for="Phone" class="control-label"></label>
+            <input asp-for="Phone" class="form-control" />
+            <span asp-validation-for="Phone" class="text-danger"></span>
+
+            <br />
+            <label asp-for="myBranches" class="control-label"></label>
+            <select multiple asp-for="myBranches" class="form-control" asp-items="@ViewBag.Branch"></select>
+            <span asp-validation-for="myBranches" class="text-danger"></span>
+
+           
+
+
+            <br />
+            <div class="form-group">
+                <input style="background-color:#d6d6a2" type="submit" value="Create" />
+            </div>
+
+        </form>
+
+
+        <div>
+            <a class="text-left" asp-action="Index"> חזור אחורה </a>
+        </div>
+
+    </div>
+
+</body>
+
+
+
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
