--- a/OurNewProject/Views/Home/Gallery.cshtml
+++ b/OurNewProject/Views/Home/Gallery.cshtml
@@ -5,11 +5,17 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+<head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital@0;1&display=swap" rel="stylesheet">
+</head>
+
 <html>
 <body>
-
+    <br />
     <div class="w3-container">
-        <h2 class="text-center"> IZEI  גלריית</h2>
+        <h2 style="font-family: 'Bona Nova', serif;color: #d6d6a2;font-size: 50px" class="text-center"> הגלריה שלנו לרשותכם  </h2>
     </div>
     <pre>
 
@@ -18,79 +24,174 @@
     <div class="w3-row-padding">
         <div class="w3-col s3 w3-container">
             <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Nature');">
-                <img src="https://www.barry-callebaut.com/sites/default/files/styles/paragraph_text_and_image_left_right/public/2019-07/icecream-loadedindulgences.png?itok=ZA-9SpzO" alt="Nature" style="width:100%">
+                <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229501630_759562471444831_7690157138162969024_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=0debeb&_nc_ohc=T23xMcDN5rEAX9QcsQs&_nc_ht=scontent-lhr8-1.xx&oh=7fed4a03088e58730617ed6302b7aa8e&oe=610EC67F" alt="Nature" style="width:100%">
             </a>
         </div>
         <div class="w3-col s3 w3-container">
             <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Snow');">
-                <img src="https://www.foodnetwork.com/content/dam/images/food/video/0/03/030/0303/0303503.jpg" alt="Snow" style="width:100%">
+                <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229531581_759540598113685_7422575870667849746_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=0debeb&_nc_ohc=Kz3nK9emewkAX_QLfPy&_nc_ht=scontent-lhr8-1.xx&oh=1026ceb5cb37c7e31cb57e7a1c33f60e&oe=610E2819" alt="Snow" style="width:100%">
             </a>
         </div>
         <div class="w3-col s3 w3-container">
             <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Mountains');">
-                <img src="https://i.guim.co.uk/img/static/sys-images/Guardian/Pix/pictures/2015/8/30/1440958763375/7c34a82f-444d-4270-91a5-41b836c46595-2060x1236.jpeg?width=445&quality=45&auto=format&fit=max&dpr=2&s=e130afe3482279b49464697385445f36" alt="Mountains" style="width:100%">
+                <img src="https://scontent-amt2-1.xx.fbcdn.net/v/t39.30808-6/229632199_759562694778142_5668457114229626653_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=0debeb&_nc_ohc=BzpMVb1RJP0AX-RAxHL&tn=wxpTeNlE5G1ozxO5&_nc_ht=scontent-amt2-1.xx&oh=a7b0f2934b783d49a4fa9865174718ff&oe=610EE7DF" alt="Mountains" style="width:100%">
             </a>
         </div>
         <div class="w3-col s3 w3-container">
             <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Lights');">
-                <img src="https://cdn.vox-cdn.com/thumbor/wqsO3IikVEnMW3dcTxoOdhGuhwM=/0x0:2048x1059/1200x800/filters:focal(861x367:1187x693)/cdn.vox-cdn.com/uploads/chorus_image/image/67035922/106423518_2945554885494410_3166613949933920201_o.0.jpg" alt="Lights" style="width:100%">
+                <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229474658_759540551447023_7312188446564595625_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=0debeb&_nc_ohc=W1bwiwB-u3kAX_Qf-fD&_nc_ht=scontent-lhr8-1.xx&oh=f8d9c3d2ff07204efb2eeeb800fd7bf6&oe=610E5F38" alt="Lights" style="width:100%">
             </a>
         </div>
-        
+    </div>
 
-        <div class="w3-row-padding">
-            <div class="w3-col s3 w3-container">
-                <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Sasa');">
-                    <img src="https://images.cookforyourlife.org/wp-content/uploads/2020/06/Chocolate-Whipped-Ice-Cream-shutterstock_1010248351.jpg" alt="Nature" style="width:100%">
-                </a>
-            </div>
-        </div><br>
+    <br>
 
+    <div class="w3-row-padding">
 
-
-
-
-
-
-
-        <div id="Nature" class="picture w3-display-container" style="display:none">
-            <img src="https://www.barry-callebaut.com/sites/default/files/styles/paragraph_text_and_image_left_right/public/2019-07/icecream-loadedindulgences.png?itok=ZA-9SpzO" alt="Nature" style="width:100%">
-            <span onclick="this.parentElement.style.display='none'"
-                  class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הגלידות החדשות שלנו עכשיו גם בכוסות</div>
+        <div class="w3-col s3 w3-container">
+            <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('Sasa');">
+                <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/l/t39.30808-6/229810793_759540608113684_778847689812759402_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=0debeb&_nc_ohc=bVGZn5CgW7EAX_FNO2v&_nc_ht=scontent-lhr8-1.xx&oh=14100b95eb1aeb608ac84fa8017e6571&oe=610EAA5D" alt="Nature" style="width:100%">
+            </a>
         </div>
 
-        <div id="Snow" class="picture w3-display-container" style="display:none">
-            <img src="https://www.foodnetwork.com/content/dam/images/food/video/0/03/030/0303/0303503.jpg" alt="Snow" style="width:100%">
-            <span onclick="this.parentElement.style.display='none'"
-                  class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">גלידות הוניל במגוון תוספות</div>
+        <div class="w3-col s3 w3-container">
+            <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('AAAA');">
+                <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229594621_759926154741796_1721906230292983362_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=0debeb&_nc_ohc=XaUL5gQBc_4AX94-O46&_nc_ht=scontent-lhr8-1.xx&oh=9490cd3a09dee03d8f7c49fd4d4c91a0&oe=610E24A6" alt="Nature" style="width:100%">
+            </a>
         </div>
 
-        <div id="Mountains" class="picture w3-display-container" style="display:none">
-            <img src="https://i.guim.co.uk/img/static/sys-images/Guardian/Pix/pictures/2015/8/30/1440958763375/7c34a82f-444d-4270-91a5-41b836c46595-2060x1236.jpeg?width=445&quality=45&auto=format&fit=max&dpr=2&s=e130afe3482279b49464697385445f36" alt="Mountains" style="width:100%">
-            <span onclick="this.parentElement.style.display='none'"
-                  class="w3-display-topright w3-button w3-transparent">&times;</span>
-            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הקלאסיות בגביע</div>
+        <div class="w3-col s3 w3-container">
+            <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('AB');">
+                <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229847203_759926168075128_7649921516402113760_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=0debeb&_nc_ohc=fIe94PPXzJcAX9urlhx&_nc_ht=scontent-lhr8-2.xx&oh=89921211a188abf473676e1dd98c7bae&oe=610E7804" alt="Nature" style="width:100%">
+            </a>
         </div>
 
-        <div id="Lights" class="picture w3-display-container" style="display:none">
-            <img src="https://cdn.vox-cdn.com/thumbor/wqsO3IikVEnMW3dcTxoOdhGuhwM=/0x0:2048x1059/1200x800/filters:focal(861x367:1187x693)/cdn.vox-cdn.com/uploads/chorus_image/image/67035922/106423518_2945554885494410_3166613949933920201_o.0.jpg" alt="Lights" style="width:100%">
-            <span onclick="this.parentElement.style.display='none'"
-                  class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">המהדורה הורודה</div>
+        <div class="w3-col s3 w3-container">
+            <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('AC');">
+                <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229621026_759926144741797_4101303508073058839_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=0debeb&_nc_ohc=0aGukuyJ7m4AX8kqNnB&_nc_ht=scontent-lhr8-1.xx&oh=5726bb8204198b9eeda218c98c761b4e&oe=610DF104" alt="Nature" style="width:100%">
+            </a>
         </div>
-
-       
-        <div id="Sasa" class="picture w3-display-container" style="display:none">
-            <img src="https://images.cookforyourlife.org/wp-content/uploads/2020/06/Chocolate-Whipped-Ice-Cream-shutterstock_1010248351.jpg" alt="Lights" style="width:100%">
-            <span onclick="this.parentElement.style.display='none'"
-                  class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
-            <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
-        </div>
-
-        <script src="~/js/Gallery.js"></script>
 
     </div>
+    <br>
+
+
+    <div class="w3-row-padding">
+
+        <div class="w3-col s3 w3-container">
+            <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('CC');">
+                <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229623021_759926138075131_6621276716496743383_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=0debeb&_nc_ohc=cZ2Br9biVxYAX8sqY3E&tn=wxpTeNlE5G1ozxO5&_nc_ht=scontent-lhr8-1.xx&oh=381f78fca50a2dda446fd39450e0345f&oe=610E404B" alt="Nature" style="width:100%">
+            </a>
+        </div>
+
+        <div class="w3-col s3 w3-container">
+            <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('CA');">
+                <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229592165_759562531444825_4481430567461830317_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=0debeb&_nc_ohc=-xtrGyZqgn0AX__IsuG&tn=wxpTeNlE5G1ozxO5&_nc_ht=scontent-lhr8-2.xx&oh=0a052a5de5a3a2c4cc372864e4857839&oe=610EB44D" alt="Nature" style="width:100%">
+            </a>
+        </div>
+
+        <div class="w3-col s3 w3-container">
+            <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('CB');">
+                <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229740421_759926131408465_8626621989273258080_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=0debeb&_nc_ohc=BrYpbmIoUY4AX98r3yp&_nc_ht=scontent-lhr8-2.xx&oh=56daa98c63aff718ff09c98ab4bb8f66&oe=610EFD87" alt="Nature" style="width:100%">
+            </a>
+        </div>
+
+        <div class="w3-col s3 w3-container">
+            <a href="javascript:void(0)" class="w3-hover-opacity" onclick="openImg('CD');">
+                <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229516998_759540521447026_8095770234471271744_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=0debeb&_nc_ohc=pkzvwawQwMoAX-M6sxE&_nc_ht=scontent-lhr8-2.xx&oh=92c547697097ae2f0b736045ca6bb2a7&oe=610E985D" alt="Nature" style="width:100%">
+            </a>
+        </div>
+
+    </div>
+
+    <pre>  </pre>
+
+    <div id="Nature" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229501630_759562471444831_7690157138162969024_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=0debeb&_nc_ohc=T23xMcDN5rEAX9QcsQs&_nc_ht=scontent-lhr8-1.xx&oh=7fed4a03088e58730617ed6302b7aa8e&oe=610EC67F" alt="Nature" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הגלידות החדשות שלנו עכשיו גם בכוסות</div>
+    </div>
+
+    <div id="Snow" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229531581_759540598113685_7422575870667849746_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=0debeb&_nc_ohc=Kz3nK9emewkAX_QLfPy&_nc_ht=scontent-lhr8-1.xx&oh=1026ceb5cb37c7e31cb57e7a1c33f60e&oe=610E2819" alt="Snow" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">גלידות הוניל במגוון תוספות</div>
+    </div>
+
+    <div id="Mountains" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-amt2-1.xx.fbcdn.net/v/t39.30808-6/229632199_759562694778142_5668457114229626653_n.jpg?_nc_cat=109&ccb=1-3&_nc_sid=0debeb&_nc_ohc=BzpMVb1RJP0AX-RAxHL&tn=wxpTeNlE5G1ozxO5&_nc_ht=scontent-amt2-1.xx&oh=a7b0f2934b783d49a4fa9865174718ff&oe=610EE7DF" alt="Mountains" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">הקלאסיות בגביע</div>
+    </div>
+
+    <div id="Lights" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229474658_759540551447023_7312188446564595625_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=0debeb&_nc_ohc=W1bwiwB-u3kAX_Qf-fD&_nc_ht=scontent-lhr8-1.xx&oh=f8d9c3d2ff07204efb2eeeb800fd7bf6&oe=610E5F38" alt="Lights" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">המהדורה הורודה</div>
+    </div>
+
+
+    <div id="Sasa" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/l/t39.30808-6/229810793_759540608113684_778847689812759402_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=0debeb&_nc_ohc=bVGZn5CgW7EAX_FNO2v&_nc_ht=scontent-lhr8-1.xx&oh=14100b95eb1aeb608ac84fa8017e6571&oe=610EAA5D" alt="Lights" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
+    </div>
+
+    <div id="AAAA" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229594621_759926154741796_1721906230292983362_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=0debeb&_nc_ohc=XaUL5gQBc_4AX94-O46&_nc_ht=scontent-lhr8-1.xx&oh=9490cd3a09dee03d8f7c49fd4d4c91a0&oe=610E24A6" alt="Lights" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
+    </div>
+
+    <div id="AB" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229847203_759926168075128_7649921516402113760_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=0debeb&_nc_ohc=fIe94PPXzJcAX9urlhx&_nc_ht=scontent-lhr8-2.xx&oh=89921211a188abf473676e1dd98c7bae&oe=610E7804" alt="Lights" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
+    </div>
+
+    <div id="AC" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229621026_759926144741797_4101303508073058839_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=0debeb&_nc_ohc=0aGukuyJ7m4AX8kqNnB&_nc_ht=scontent-lhr8-1.xx&oh=5726bb8204198b9eeda218c98c761b4e&oe=610DF104" alt="Lights" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
+    </div>
+
+    <div id="CC" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-1.xx.fbcdn.net/v/t39.30808-6/229623021_759926138075131_6621276716496743383_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=0debeb&_nc_ohc=cZ2Br9biVxYAX8sqY3E&tn=wxpTeNlE5G1ozxO5&_nc_ht=scontent-lhr8-1.xx&oh=381f78fca50a2dda446fd39450e0345f&oe=610E404B" alt="Lights" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
+    </div>
+    <div id="CA" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229592165_759562531444825_4481430567461830317_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=0debeb&_nc_ohc=-xtrGyZqgn0AX__IsuG&tn=wxpTeNlE5G1ozxO5&_nc_ht=scontent-lhr8-2.xx&oh=0a052a5de5a3a2c4cc372864e4857839&oe=610EB44D" alt="Lights" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
+    </div>
+    <div id="CB" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229740421_759926131408465_8626621989273258080_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=0debeb&_nc_ohc=BrYpbmIoUY4AX98r3yp&_nc_ht=scontent-lhr8-2.xx&oh=56daa98c63aff718ff09c98ab4bb8f66&oe=610EFD87" alt="Lights" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
+    </div>
+    <div id="CD" class="picture w3-display-container" style="display:none">
+        <img src="https://scontent-lhr8-2.xx.fbcdn.net/v/t39.30808-6/229516998_759540521447026_8095770234471271744_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=0debeb&_nc_ohc=pkzvwawQwMoAX-M6sxE&_nc_ht=scontent-lhr8-2.xx&oh=92c547697097ae2f0b736045ca6bb2a7&oe=610E985D" alt="Lights" style="width:100%">
+        <span onclick="this.parentElement.style.display='none'"
+              class="w3-display-topright w3-button w3-transparent w3-text-white">&times;</span>
+        <div class="w3-display-bottomleft w3-container w3-padding w3-text-black">היוגורטים שלנו</div>
+    </div>
+
+
+
+    <script src="~/js/Gallery.js"></script>
+
+
 </body>
 </html>
