home page is done

--- a/OurNewProject/Views/Home/Team.cshtml
+++ b/OurNewProject/Views/Home/Team.cshtml
@@ -20,13 +20,19 @@
 
         <div class="row">
             <div class="card">
-                <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t1.6435-9/124018461_3442015669250358_4730789914904953842_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=Vwc7FHeZw48AX8x7XDN&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=faa5fc6e1bc17ef2d5f53c8ea2b91967&oe=61278CF9" alt="Zehava" style="width:100%" height="297.72">
+                @* <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t1.6435-9/124018461_3442015669250358_4730789914904953842_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=Vwc7FHeZw48AX8x7XDN&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=faa5fc6e1bc17ef2d5f53c8ea2b91967&oe=61278CF9" alt="Zehava" style="width:100%" height="297.72">
+                *@
+
+                <img src="https://i.postimg.cc/05mCYnyw/Whats-App-Image-2021-08-03-at-22-21-59.jpg" alt="Zehava" style="width:100%" height="297.72">
+
+
+
                 <h1>Zehava Liviyev</h1>
                 <p class="title">Web Developer</p>
                 <p>The College of Management Academic Studies</p>
                 <div style="margin: 24px 0;">
-                    <a  target="_blank" href="https://www.linkedin.com/in/zehava-liviyev-23006a202/"><i class="fa fa-linkedin"></i></a>
-                    <a  target="_blank" href="https://www.facebook.com/profile.php?id=100003258770015"><i class="fa fa-facebook"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/zehava-liviyev-23006a202/"><i class="fa fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=100003258770015"><i class="fa fa-facebook"></i></a>
                 </div>
                 <p><button>Contact</button></p>
             </div>
