--- a/OurNewProject/Views/Home/Index.cshtml
+++ b/OurNewProject/Views/Home/Index.cshtml
@@ -29,12 +29,12 @@
     }
 
     .hero-image {
-        background-image: url("/w3images/photographer.jpg");
-        background-color: #cccccc;
-        height: 650px;
+        background-image: url("../LOGO.jpeg");
+   @*     background-color: #cccccc;*@
+        height: 400px;
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
+       @* background-size: cover;*@
         position: relative;
     }
 </style>
@@ -43,22 +43,14 @@
 
 
     <!-- Header -->
-    <header class="w3-container w3-red w3-center; hero-image" style="padding:128px 16px; background-image:url(../LOGO.jpeg)">
-        @* <h1 class="w3-margin w3-jumbo">START PAGE</h1>*@
-        @*   <p class="w3-xlarge">Template by w3.css</p>*@
-
-        <form asp-controller="Branches" asp-action="TheBranch">   <button class="w3-button w3-padding-large w3-large w3-margin-top text-right" style="background-color: #fcdbcc; color: #5a382f; border-radius: 80px;">גש לתפריט שלנו</button></form>
-        <form asp-controller="Branches" asp-action="TheBranch">   <button class="w3-button w3-padding-large w3-large w3-margin-top" style="background-color: #fcdbcc; color: #5a382f; border-radius: 80px;">גש לתפריט שלנו</button></form>
-
+    <header class="w3-container w3-center; hero-image" style="padding:128px 16px; background-image:url(../LOGO.jpeg)">
     </header>
 
     <!-- First Grid -->
-    <div class="w3-row-padding w3-padding-64 w3-container">
+    <div class="w3-row-padding w3-container">
         <div class="w3-content">
             <div class="w3-twothird">
 
-               <br />
-                <br />
                 <h1 class="text-center">IZEI Ice Cream</h1>
                 <div class="w3-padding-32; text-center">
                     <h5 class="text-center">
@@ -117,8 +109,8 @@
         </div>
     </div>
 
-    <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-        <h1 class="w3-margin w3-xlarge">במהלך היום שלך אכלת גלידת IZEI? כל השאר זה בונוס</h1>
+    <div class="w3-container w3-center w3-opacity w3-padding-64" style="background-color: #d6d6a2;color: #090e46">
+        <h1 class="w3-margin w3-xlarge"> <b> במהלך היום שלך אכלת גלידת IZEI? כל השאר זה בונוס</b></h1>
     </div>
 
   
