--- a/OurNewProject/Views/ProductImages/Create.cshtml
+++ b/OurNewProject/Views/ProductImages/Create.cshtml
@@ -17,7 +17,7 @@
         <form asp-action="Create">
 
             <label asp-for="productId" class="control-label"></label>
-            <select asp-for="productId" class="form-control" asp-items="ViewBag.productId"></select>
+            <select asp-for="productId" class="form-control" asp-items="ViewBag.PN"></select>
 
             <label asp-for="Imge" class="control-label"></label>
             <input asp-for="Imge" class="form-control" />
